Add v4 collectibles functional test and update swagger
