# docs/swagger.yaml
@@ -109,6 +109,7 @@ definitions:
       name:
         type: string
       nft_version:
+        description: Delete in the future version, as it's now part of Collectible
         type: string
       slug:
         type: string
@@ -1014,6 +1015,69 @@ paths:
       - application/json
       description: Get collection categories
       operationId: collection_categories_v3
+      parameters:
+      - default: '{"60": ["0xb3624367b1ab37daef42e1a3a2ced012359659b0"]}'
+        description: Payload
+        in: body
+        name: data
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/blockatlas.DocsResponse'
+      summary: Get list of collections from a specific coin and addresses
+      tags:
+      - Collections
+  /v4/{coin}/collections/{owner}/collection/{collection_id}:
+    get:
+      consumes:
+      - application/json
+      description: Get a collection from the address
+      operationId: collection_v4
+      parameters:
+      - default: ethereum
+        description: the coin name
+        in: path
+        name: coin
+        required: true
+        type: string
+      - default: 0x0875BCab22dE3d02402bc38aEe4104e1239374a7
+        description: the query address
+        in: path
+        name: owner
+        required: true
+        type: string
+      - default: 0x06012c8cf97bead5deae237070f9587f8e7a266d
+        description: the query collection
+        in: path
+        name: collection_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/blockatlas.CollectionPage'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/ginutils.ApiError'
+      summary: Get Collection
+      tags:
+      - Collections
+  /v4/collectibles/categories:
+    post:
+      consumes:
+      - application/json
+      description: Get collection categories
+      operationId: collection_categories_v4
       parameters:
       - default: '{"60": ["0xb3624367b1ab37daef42e1a3a2ced012359659b0"]}'
         description: Payload
